--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-image-crop": "^10.1.5",
     "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^6.14.0",
     "sass": "^1.63.6"
